app/assets/stylesheets/pages/_home.scss
// Specific CSS for your home-page
html, body{
  display: flex;
  flex-direction: column;
  justify-content: center;
  max-width: 100%;
  overflow-x: hidden;
}

.mydimension{
  overflow-x: hidden;
  max-width: 100%;
}

.titlebodycard {
  padding: 20px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: rgb(0, 0, 0);
  position: absolute;
  top:0px;
  right:0px;
  bottom:0px;
  left:0px;
  animation-name: blackopacitychange;
  animation-duration: 10s;
  animation-fill-mode: forwards
}
@keyframes blackopacitychange {
  0% {background-color: rgb(0, 0, 0);}
  80% {background-color: rgb(0, 0, 0,);}
  100% {background-color: rgba(0, 0, 0, 1);}
}



.titlecard h1{
  padding: 5px;
  color: transparent;
  text-overflow: ellipsis;
  white-space: nowrap;
  background: linear-gradient(45deg, rgb(0, 234, 246),rgb(2, 205, 219),rgb(33, 139, 146),rgb(5, 42, 75), rgb(0, 0, 0));
  background-clip: text;
  background-size: 1000%;
  font-size: calc((10vh + 10vw) / 3.2);
  background-repeat: no-repeat;
  animation-name: titlechange, titleshadowchange;
  animation-duration: 7s;
  animation-timing-function: ease-in-out;
  animation-fill-mode: forwards
}
@keyframes titlechange {
  0% {background-size: 0%;}
  10% {background-size: 0%;}
  90% {opacity: 1;}
  100% {background-size: 1000%;
  opacity: 0;}
}
@keyframes titleshadowchange {
  0% {text-shadow: 0px 0px 5px rgb(0, 0, 0);}
  70% {text-shadow: 0px 0px 5px rgb(0, 0, 0);}
  88% {text-shadow: 0px 0px 5px rgba(10, 251, 255, 0.4);}
  93% {text-shadow: 0px 0px 5px rgba(22, 251, 255, 0.6);}
  100% {text-shadow: 0px 0px 5px rgba(11, 255, 255, 0.4);}
}

.dot {
  z-index: 10;
  padding-left: 5px;
  padding-bottom: 8px;
  padding-right: 5px;
  font-family: 'Permanent Marker', cursive;
  color: transparent;
  background: linear-gradient(180deg, rgb(213, 0, 246),rgb(205, 2, 219),rgb(140, 33, 146),rgb(43, 5, 75), rgb(0, 0, 0));
  background-clip: text;
  background-size: 10vh;
  background-position: bottom;
  font-size: calc((10vh + 10vw) / 2);
  background-repeat: no-repeat;
  animation-name: dotchange, dotshadowchange ;
  animation-delay: 4s;
  animation-duration: 3s;
  animation-timing-function: ease-in-out;
  animation-fill-mode: both
}
@keyframes dotchange {
  0% {background-position: 0px -200px;}
  10% {background-position: 0px -200px;}
  30% {background-position: 0px 10px;}
  90% {opacity: 1;}
  100% {background-position: 0px 10px;
  opacity: 0;}
}
@keyframes dotshadowchange {
  0% {text-shadow: 0px 0px 13px rgb(0, 0, 0);}
  45% {text-shadow: 0px 0px 13px rgb(0, 0, 0);}
  90% {text-shadow: 0px 0px 13px rgba(131, 9, 117, 0.3);}
  100% {text-shadow: 0px 0px 13px rgba(127, 10, 123, 0.3);}
}


.nova{
  opacity: 0;
  height: 100vh;
  width: 100vw;
  z-index: 0;
  background-image: radial-gradient(circle, rgb(249, 254, 255) 0%, rgba(238, 55, 255, 0.739) 25%, rgba(208, 36, 255, 0) 40%, rgba(0, 0, 0, 0) 92%);
  background: cover;
  animation-name: novachange;
  animation-delay: 5s;
  animation-duration: 3s;
  animation-timing-function: ease-in;
  animation-fill-mode: forwards
}
@keyframes novachange {
  0% {scale: 0%;
    opacity: 0.1;}
  10% {scale: 0%;
    opacity: 0.3;}
  70% {scale: 2000%;
    opacity: 1;}
  100% {scale: 1000%;
    opacity: 0;}
}
@-webkit-keyframes novachange {
  0% {scale: 0%;
    opacity: 0.1;}
  10% {scale: 0%;
    opacity: 0.3;}
  70% {scale: 2000%;
    opacity: 1;}
  100% {scale: 1000%;
    opacity: 0;}
}

.bodycard{
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  top:0px;
  right:0px;
  bottom:0px;
  left:0px;
}

//___background hue tones for the nebula below this line_______________________________

.nebulaone{
  height: 140vh;
  background: radial-gradient(circle, rgb(255, 84, 238) 0%, rgba(231,83,117,1) 50%, rgba(137,78,154,1) 74%, rgba(69,22,116,1) 84%, rgb(15, 0, 65) 92%);
  opacity: 0;
  position: absolute;
  top:0px;
  right:0px;
  bottom:0px;
  left:0px;
  animation-name: nonechangeone;
  animation-delay: 8s;
  animation-duration: 4s;
  animation-timing-function: ease-in;
  animation-fill-mode: forwards
}


.nebulatwo{
  height: 140vh;
  background: linear-gradient(135deg, rgba(13, 194, 255, 0.7) 0%, rgba(231,83,117,0.5) 50%, rgb(7, 28, 66) 74%, rgba(69,22,116,0.8) 84%, rgba(5, 1, 115, 0.7) 92%);
  opacity: 0;
  position: absolute;
  top:0px;
  right:0px;
  bottom:0px;
  left:0px;
  animation-name: ntwochange;
  animation-delay: 8s;
  animation-duration: 3s;
  animation-timing-function: ease-in;
  animation-fill-mode: forwards
}
@keyframes ntwochange {
  0% {opacity: 0;}
  100% {opacity: 0.4;}
}

.nebulathree{
  height: 140vh;
  background: linear-gradient(286deg, rgba(47, 8, 199, 0.6) 0%, rgba(22, 17, 65, 0.8) 50%, rgba(137,78,154,0.6) 74%, rgba(69,22,116,0.9) 84%, rgba(11, 0, 97, 0.8) 92%);
  opacity: 0;
  position: absolute;
  top:0px;
  right:0px;
  bottom:0px;
  left:0px;
  animation-name: nthreechange;
  animation-delay: 8s;
  animation-duration: 2s;
  animation-timing-function: ease-in;
  animation-fill-mode: forwards
}
@keyframes nthreechange {
  0% {opacity: 0;}
  100% {opacity: 0.4;}
}

.nebulafour{
  height: 140vh;
  background: linear-gradient(240deg, rgba(64, 0, 191, 0.6) 10%, rgba(52,6,17,1) 24%, rgba(42, 15, 97, 0.8) 59%, rgba(137,78,154,0.8) 74%, rgba(69,22,116,0.8) 84%);
  opacity: 0;
  position: absolute;
  top:0px;
  right:0px;
  bottom:0px;
  left:0px;
  animation-name: nfourchange;
  animation-delay: 8s;
  animation-duration: 4s;
  animation-timing-function: ease-in;
  animation-fill-mode: forwards
}
@keyframes nfourchange {
  0% {opacity: 0;}
  100% {opacity: 0.4;}
}
/* ... */

